[Mac] Fix favicon disappearing in pinned tabs in RTL.

In RTL mode a tab transitioning from non-pinned to pinned ends up with
no visible favicon. This cl fixes this problem, and also uses the
correct tab width to calculate the iconview's position in non-pinned
RTL mode.

Bug: 789347
Change-Id: I972ef71c47811f9b2a5cf6ca2ac5f2c654d0c2bc